; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/xen/netback/extr_netback_unit_tests.c_xnb_rxpkt2gnttab_empty.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/xen/netback/extr_netback_unit_tests.c_xnb_rxpkt2gnttab_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.xnb_pkt = type { i32 }
%struct.mbuf = type { i32 }

@M_WAITOK = common dso_local global i32 0, align 4
@MT_DATA = common dso_local global i32 0, align 4
@xnb_unit_pvt = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@DOMID_FIRST_RESERVED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @xnb_rxpkt2gnttab_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xnb_rxpkt2gnttab_empty(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.xnb_pkt, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.mbuf*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 60, i32* %7, align 4
  %9 = load i32, i32* @M_WAITOK, align 4
  %10 = load i32, i32* @MT_DATA, align 4
  %11 = call %struct.mbuf* @m_get(i32 %9, i32 %10)
  store %struct.mbuf* %11, %struct.mbuf** %8, align 8
  %12 = load %struct.mbuf*, %struct.mbuf** %8, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @xnb_mbufc2pkt(%struct.mbuf* %12, %struct.xnb_pkt* %5, i32 0, i32 %13)
  %15 = load %struct.mbuf*, %struct.mbuf** %8, align 8
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @xnb_unit_pvt, i32 0, i32 1), align 4
  %17 = load i32, i32* @DOMID_FIRST_RESERVED, align 4
  %18 = call i32 @xnb_rxpkt2gnttab(%struct.xnb_pkt* %5, %struct.mbuf* %15, i32 %16, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @xnb_unit_pvt, i32 0, i32 0), i32 %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp eq i32 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @XNB_ASSERT(i32 %21)
  %23 = call i32 @safe_m_freem(%struct.mbuf** %8)
  ret void
}

declare dso_local %struct.mbuf* @m_get(i32, i32) #1

declare dso_local i32 @xnb_mbufc2pkt(%struct.mbuf*, %struct.xnb_pkt*, i32, i32) #1

declare dso_local i32 @xnb_rxpkt2gnttab(%struct.xnb_pkt*, %struct.mbuf*, i32, i32*, i32) #1

declare dso_local i32 @XNB_ASSERT(i32) #1

declare dso_local i32 @safe_m_freem(%struct.mbuf**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
